--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: cpp
-script: make && make test
+script:
+        - cmake .
+        - make
+        - make test
 before_script:
         - sudo apt-get update -qq
         - sudo apt-get install libboost-all-dev
