--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.4)
 project(TgBot)
 
 ### options
@@ -6,7 +6,7 @@ option(ENABLE_TESTS "Set to ON to enable building of tests" OFF)
 option(ENABLE_SAMPLES "Set to ON to enable building of samples" OFF)
 
 ### sources
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 include_directories("${PROJECT_SOURCE_DIR}/src")
 set(SRC_LIST
     src/tgbot/Api.cpp
