--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,10 @@ script:
         - make
         - make test
 sudo: false
-addons:
-apt:
-        sources:
-                - ubuntu-toolchain-r-test
-        packages:
-                - cmake
-                - gcc
-                - libboost-all-dev
+before_script:
+        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+        - sudo apt-get update -qq
+        - sudo apt-get install -qq libboost-all-dev gcc-4.7 g++-4.7
 notifications:
         email:
                 recipients:
