--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,5 @@ script:
 before_script:
         - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
         - sudo apt-get update -qq
-        - sudo apt-get install -qq libboost-all-dev gcc-4.7 g++-4.7
-notifications:
-        email:
-                recipients:
-                        - reo7sp@reo7sp.ru
-                on_success: change
-                on_failure: always
+        - sudo apt-get install -qq libboost-all-dev gcc-4.9 g++-4.9
+        - export CXX="g++-4.9" CC="gcc-4.9"
