Make the samples independent of the library's CMakeLists

--- a/samples/echobot/CMakeLists.txt
+++ b/samples/echobot/CMakeLists.txt
@@ -1,4 +1,10 @@
-set(SAMPLE_NAME echobot)
-
-add_executable(${SAMPLE_NAME} src/main.cpp)
-target_link_libraries(${SAMPLE_NAME} TgBot)
+cmake_minimum_required(VERSION 2.8.4)
+project(echobot)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(Boost_USE_MULTITHREADED ON)
+find_package(Threads REQUIRED)
+find_package(OpenSSL REQUIRED)
+find_package(Boost COMPONENTS system iostreams unit_test_framework REQUIRED)
+include_directories(/usr/local/include ${OPENSSL_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
+add_executable(echobot src/main.cpp)
+target_link_libraries(echobot /usr/local/lib/libTgBot.a ${CMAKE_THREAD_LIBS_INIT} ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES})
