--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ services:
     - docker
 
 script:
-    - docker build -t reo7sp/tgbot-cpp .
+    - docker build -t reo7sp/tgbot-cpp -f Dockerfile_test .
+    - docker run --rm reo7sp/tgbot-cpp
