--- a/Dockerfile_test
+++ b/Dockerfile_test
@@ -24,4 +24,5 @@ RUN rm -rf CMakeCache.txt CMakeFiles/ && \
     cmake . && make -j4
 
 WORKDIR /tmp/tgbot-cpp
+ENV CTEST_OUTPUT_ON_FAILURE=1
 CMD make test
