Helper method for loading files. Photo upload example. Fixes #24

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,13 +11,15 @@ set(SRC_LIST
 	src/Api.cpp
 	src/TgTypeParser.cpp
 	src/TgException.cpp
+	src/EventHandler.cpp
 	src/net/Url.cpp
 	src/net/HttpClient.cpp
 	src/net/HttpParser.cpp
 	src/net/TgLongPoll.cpp
 	src/tools/StringTools.cpp
+	src/tools/FileTools.cpp
 	src/types/InlineQueryResult.cpp
-	src/EventHandler.cpp
+	src/types/InputFile.cpp
 )
 
 ### libs
