--- a/samples/photo/Dockerfile
+++ b/samples/photo/Dockerfile
@@ -1,8 +1,8 @@
 FROM reo7sp/tgbot-cpp
 MAINTAINER Oleg Morozenkov <a@reo7sp.ru>
 
-WORKDIR /tmp/echobot
+WORKDIR /tmp/photo
 COPY . .
 RUN cmake .
 RUN make -j4
-CMD ./echobot
+CMD ./photo
