--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ services:
     - docker
 
 script:
-    -
+     - docker build -t reo7sp/tgbot-cpp -f Dockerfile .
+     - docker build -t reo7sp/tgbot-cpp-test -f Dockerfile_test .
+     - docker run --rm reo7sp/tgbot-cpp-test
 
