--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 env:
    global:
-     - CONAN_USERNAME: "conan"
-     - CONAN_LOGIN_USERNAME: "conanbot"
+     - CONAN_USERNAME: "reo7sp"
+     - CONAN_LOGIN_USERNAME: "reo7sp"
      - CONAN_CHANNEL: "testing"
-     - CONAN_UPLOAD: "https://api.bintray.com/conan/conan-community/conan"
+     - CONAN_UPLOAD: "https://api.bintray.com/conan/reo7sp/conan-packages"
      - CONAN_STABLE_BRANCH_PATTERN: "release/*"
      - CONAN_UPLOAD_ONLY_WHEN_STABLE: 1 # Will only upload when the branch matches "release/*"
      - CONAN_DOCKER_32_IMAGES: 1
