--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ jobs:
           - docker build -t reo7sp/tgbot-cpp -f Dockerfile .
           - docker build -t reo7sp/tgbot-cpp-test -f Dockerfile_test .
           - docker run --rm reo7sp/tgbot-cpp-test
-      - <<: *linux
-        stage: conan-linux
-        env: CONAN_GCC_VERSIONS=4.8 CONAN_DOCKER_IMAGE=conanio/gcc48 CONAN_ARCHS=x86_64
+      #- <<: *linux
+      #  stage: conan-linux
+      #  env: CONAN_GCC_VERSIONS=4.8 CONAN_DOCKER_IMAGE=conanio/gcc48 CONAN_ARCHS=x86_64
       - <<: *linux
         stage: conan-linux
         env: CONAN_GCC_VERSIONS=4.9 CONAN_DOCKER_IMAGE=conanio/gcc49
@@ -52,9 +52,9 @@ jobs:
       - <<: *linux
         stage: conan-linux
         env: CONAN_GCC_VERSIONS=8 CONAN_DOCKER_IMAGE=conanio/gcc8
-      - <<: *linux
-        stage: conan-linux
-        env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=conanio/clang39
+      #- <<: *linux
+      #  stage: conan-linux
+      #  env: CONAN_CLANG_VERSIONS=3.9 CONAN_DOCKER_IMAGE=conanio/clang39
       - <<: *linux
         stage: conan-linux
         env: CONAN_CLANG_VERSIONS=4.0 CONAN_DOCKER_IMAGE=conanio/clang40
