dive MT and MD visual runtime into separated jobs

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,10 +17,22 @@ environment:
           CONAN_VISUAL_VERSIONS: 15
           CONAN_ARCHS: x86
           CONAN_BUILD_TYPES: Release
+          CONAN_VISUAL_RUNTIMES: MT
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           CONAN_VISUAL_VERSIONS: 15
           CONAN_ARCHS: x86_64
           CONAN_BUILD_TYPES: Release
+          CONAN_VISUAL_RUNTIMES: MT
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CONAN_VISUAL_VERSIONS: 15
+          CONAN_ARCHS: x86
+          CONAN_BUILD_TYPES: Release
+          CONAN_VISUAL_RUNTIMES: MD
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          CONAN_VISUAL_VERSIONS: 15
+          CONAN_ARCHS: x86_64
+          CONAN_BUILD_TYPES: Release
+          CONAN_VISUAL_RUNTIMES: MD
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
