--- a/.github/workflows/sw.yml
+++ b/.github/workflows/sw.yml
@@ -12,25 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    #- uses: egorpugin/sw-action@master
-
-    - name: Download SW
-      shell: cmake -P {0}
-      run: |
-        if (WIN32)
-          file(DOWNLOAD "https://software-network.org/client/sw-master-windows-client.zip" ./sw.zip)
-        elseif (APPLE)
-          file(DOWNLOAD "https://software-network.org/client/sw-master-macos-client.tar.gz" ./sw.zip)
-        else()
-          file(DOWNLOAD "https://software-network.org/client/sw-master-linux-client.tar.gz" ./sw.zip)
-        endif()
-
-    - name: Unpack SW
-      run: cmake -E tar xvf sw.zip
-
-    - name: chmod
-      run: chmod 755 sw
-      shell: sh
+    - uses: egorpugin/sw-action@master
 
     - name: build
       run: ./sw build
