--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 include_directories(include)
 set(SRC_LIST
     src/Api.cpp
+    src/Bot.cpp
     src/EventHandler.cpp
     src/TgException.cpp
     src/TgTypeParser.cpp
