--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8.4)
 project(TgBot)
 
 # options
+option(USE_CURL "Use CURL library for http requests" ON)
 option(ENABLE_TESTS "Set to ON to enable building of tests" OFF)
 option(BUILD_SHARED_LIBS "Build tgbot-cpp shared/static library." OFF)
 option(BUILD_DOCUMENTATION "Build doxygen API documentation." OFF)
@@ -45,18 +46,20 @@ find_package(OpenSSL REQUIRED)
 include_directories(${OPENSSL_INCLUDE_DIR})
 
 ## curl
-find_package(CURL 7.56.0)
-if (CURL_FOUND)
-    include_directories(${CURL_INCLUDE_DIRS})
-    add_definitions(-DHAVE_CURL)
+if (USE_CURL)
+    find_package(CURL 7.56.0)
+    if (CURL_FOUND)
+        include_directories(${CURL_INCLUDE_DIRS})
+        add_definitions(-DHAVE_CURL)
+    endif()
 endif()
 
 ## boost
 set(Boost_USE_MULTITHREADED ON)
 if (ENABLE_TESTS)
-    find_package(Boost 1.59.0 COMPONENTS system unit_test_framework REQUIRED)
+    find_package(Boost COMPONENTS system unit_test_framework REQUIRED)
 else()
-    find_package(Boost 1.59.0 COMPONENTS system REQUIRED)
+    find_package(Boost COMPONENTS system REQUIRED)
 endif()
 include_directories(${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIR_RELEASE})
