--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,14 @@ on:
     branches: [ master ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag tgbot-cpp:$(date +%s)
+    - name: Build the docker image
+      run: docker build -t reo7sp/tgbot-cpp -f Dockerfile .
+    - name: Build the docker image with unit tests
+      run: docker build -t reo7sp/tgbot-cpp-test -f Dockerfile_test .
+    - name: Run unit tests
+      run: docker run --rm reo7sp/tgbot-cpp-test
