--- a/samples/inline-keyboard/Dockerfile
+++ b/samples/inline-keyboard/Dockerfile
@@ -4,5 +4,5 @@ MAINTAINER Oleg Morozenkov <a@reo7sp.ru>
 WORKDIR /usr/src/inline-keyboard
 COPY . .
 RUN cmake .
-RUN make
+RUN make -j4
 CMD ./inline-keyboard
