--- a/samples/reply-keyboard/Dockerfile
+++ b/samples/reply-keyboard/Dockerfile
@@ -1,8 +1,8 @@
 FROM reo7sp/tgbot-cpp
 MAINTAINER Oleg Morozenkov <a@reo7sp.ru>
 
-WORKDIR /usr/src/echobot-curl-client
+WORKDIR /usr/src/reply-keyboard
 COPY . .
 RUN cmake .
 RUN make -j4
-CMD ./echobot-curl-client
+CMD ./reply-keyboard
