--- a/samples/received-text-processing/CMakeLists.txt
+++ b/samples/received-text-processing/CMakeLists.txt
@@ -1,4 +1,4 @@
-ccmake_minimum_required(VERSION 3.10.2)
+cmake_minimum_required(VERSION 3.10.2)
 project(received-text-processing)
 
 set(CMAKE_CXX_STANDARD 14)
