--- a/Dockerfile_test
+++ b/Dockerfile_test
@@ -74,6 +74,10 @@ WORKDIR /usr/src/tgbot-cpp/samples/reply-keyboard
 RUN rm -rf CMakeCache.txt CMakeFiles/ && \
     cmake . && make -j$(nproc)
 
+WORKDIR /usr/src/tgbot-cpp/samples/receive-file
+RUN rm -rf CMakeCache.txt CMakeFiles/ && \
+    cmake . && make -j$(nproc)
+
 WORKDIR /usr/src/tgbot-cpp
 ENV CTEST_OUTPUT_ON_FAILURE=1
 CMD make test
