--- a/samples/receive-file/Dockerfile
+++ b/samples/receive-file/Dockerfile
@@ -1,8 +1,8 @@
 FROM reo7sp/tgbot-cpp
 MAINTAINER Oleg Morozenkov <m@oleg.rocks>
 
-WORKDIR /usr/src/photo
+WORKDIR /usr/src/receive-file
 COPY . .
 RUN cmake .
 RUN make -j4
-CMD ./photo
+CMD ./receive-file
