Added ability to handle error codes from all Api requests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(TEST_SRC_LIST
     main.cpp
+    tgbot/Api.cpp
     tgbot/net/Url.cpp
     tgbot/net/HttpParser.cpp
     tgbot/tools/StringTools.cpp
