tgbot-cpp: Use explicit alias target for curl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ set(LIB_LIST
 )
 
 if (CURL_FOUND)
-    set(LIB_LIST ${LIB_LIST} ${CURL_LIBRARIES})
+    set(LIB_LIST ${LIB_LIST} CURL::libcurl)
 endif()
 
 if (WIN32)
